<resources>
    <string name="app_name">Scholaria</string>
    <string name="welcome_message">Welcome to Scholaria!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member? </string>
    <string name="register_now">Register now</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="logo_description">Scholaria Logo</string>
</resources>